# PINNfluence

./: .gitignore  LICENSE  README.md  calc_influences.py  environment.yml  pyproject.toml  train.py
_utils/: models.py  plotting.py  utils.py
dataset/: README.md
experiments/burgers_equation/: burgers_eqn.py  calc_influences.py  callbacks.py  defaults.py  error_RAR-G_adam_only.txt  error_if.txt  eval.ipynb  finetune_if.py  finetune_if_RAR_ONLY_FOR_CMP.py  finetune_like_RAR.py  finetune_random.py  rar.py  train.py
experiments/burgers_equation/_experimental/: finetune_if.py  finetune_random_trashy.py
experiments/burgers_equation/model_zoo/: adam-50000.pt  adam_best.pt  data_points.npz  finedtuned_random_best.pt  lbfgs-55079.pt  train_x.npy
experiments/ns_steady/: calc_influences.py  defaults.py  eval.ipynb  train.py
experiments/resampling/: diffusion_eq.ipynb
model_zoo/bad/: train_x.npy
model_zoo/broken/: train_x.npy
pinnfluence/: precalculate_influences.py  pretrain.py  pretrain_w_NNCG_SOAP.py  problem_factory.py
pinnfluence/utils/: callbacks.py  common.py  dataset.py  defaults.py  indicators.py  influence.py  io.py  models.py  optimizers.py  parse_args.py  plotting.py  problems.py  utils.py
refactor_for_hpc/burgers/: defaults.py  eval_finetuning.ipynb  eval_finetuning.py  like_rar.py  like_rar_dirty.py  precompute_influences.py  pretrain_model.py
refactor_for_hpc/burgers/evaluations/: check_influential_points.ipynb  (+6 more)
refactor_for_hpc/hpc_files/: deepxde_generic_code.def
refactor_for_hpc/utils/: callbacks.py  dataset.py  models.py  utils.py
(+20 files in other folders)
